fix field address in 'mass project get'

--- a/cmd/templates/project.get.md.tmpl
+++ b/cmd/templates/project.get.md.tmpl
@@ -10,6 +10,6 @@
 {{end}}
 
 ## Cost
-**Monthly Average:** ${{.MonthlyAverageCost}}
+**Monthly Average:** ${{.Cost.Monthly.Average.Amount}}
 
-**Daily Average:** ${{.DailyAverageCost}}
+**Daily Average:** ${{.Cost.Daily.Average.Amount}}
