remove bundle from 'manifest' query in gql api

--- a/cmd/templates/environment.get.md.tmpl
+++ b/cmd/templates/environment.get.md.tmpl
@@ -8,7 +8,7 @@
 | Name | Bundle | Status |
 | ---- | ------ | ------ |
 {{- range .Packages}}
-| **{{.Manifest.Name}}** | {{.Manifest.Bundle.Name}} | {{.Status}} |
+| **{{.Manifest.Name}}** | {{.Bundle.Name}} | {{.Status}} |
 {{- end}}
 
 ## Cost
