--- a/cmd/templates/package.get.md.tmpl
+++ b/cmd/templates/package.get.md.tmpl
@@ -1,6 +1,6 @@
 # Package: {{.NamePrefix}}
 
-**Bundle:** {{.Manifest.Bundle.Name}}
+**Bundle:** {{.Bundle.Name}}
 
 **Environment:** {{.Environment.Slug}}
 
