update artifact pull/create to use payload

--- a/cmd/templates/artifact.get.md.tmpl
+++ b/cmd/templates/artifact.get.md.tmpl
@@ -18,8 +18,8 @@
 
 {{if .Formats}}**Available Formats:** {{range $i, $f := .Formats}}{{if $i}}, {{end}}{{$f}}{{end}}{{end}}
 
-{{if ne .SpecsJSON "{}"}}## Specs
+{{if ne .Payload "{}"}}## Payload
 ```json
-{{.SpecsJSON}}
+{{.Payload}}
 ```
 {{end}}
