fixing cost nil pointer

--- a/cmd/templates/project.get.md.tmpl
+++ b/cmd/templates/project.get.md.tmpl
@@ -10,12 +10,6 @@
 {{end}}
 
 ## Cost
-{{- if .Cost}}
-**Monthly Average:** {{.Cost.Monthly.Average.DisplayAmountUSD}}
+**Monthly Average:** {{with .Monthly.Average.Amount}}${{.}}{{end}}
 
-**Daily Average:** {{.Cost.Daily.Average.DisplayAmountUSD}}
-{{- else}}
-**Monthly Average:** -
-
-**Daily Average:** -
-{{- end}}
+**Daily Average:** {{with .Daily.Average.Amount}}${{.}}{{end}}
