hotfix cost, still had a nil ref

--- a/cmd/templates/project.get.md.tmpl
+++ b/cmd/templates/project.get.md.tmpl
@@ -10,6 +10,6 @@
 {{end}}
 
 ## Cost
-**Monthly Average:** {{with .Monthly.Average.Amount}}${{.}}{{end}}
+**Monthly Average:** {{with .Cost.Monthly.Average.Amount}}${{.}}{{end}}
 
-**Daily Average:** {{with .Daily.Average.Amount}}${{.}}{{end}}
+**Daily Average:** {{with .Cost.Daily.Average.Amount}}${{.}}{{end}}
